--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -2,8 +2,7 @@
   "about_title": "About Us",
   "about_description": "We are a software company dedicated to building modern, efficient, and scalable mobile applications.",
   "contact_us": "Contact Us",
-  "first_name": "First Name",
-  "last_name": "Last Name",
+  "name": "Name",
   "email_address": "Email Address",
   "leave_message": "Leave your message",
   "submit": "SUBMIT",
